@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2012, 2018 Lablicate GmbH.
+ * Copyright (c) 2012, 2023 Lablicate GmbH.
  * 
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -12,43 +12,48 @@
 package org.eclipse.chemclipse.rcp.app.ui.provider;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.HashMap;
 import java.util.Map;
 
+import javax.inject.Inject;
+
+import org.eclipse.chemclipse.logging.core.Logger;
+import org.eclipse.e4.core.services.translation.TranslationService;
 import org.eclipse.e4.ui.model.application.ui.basic.MPart;
 import org.eclipse.jface.resource.ImageDescriptor;
 import org.eclipse.jface.viewers.ITableLabelProvider;
 import org.eclipse.jface.viewers.LabelProvider;
 import org.eclipse.swt.graphics.Image;
 
-import org.eclipse.chemclipse.logging.core.Logger;
-
 public class SelectViewLabelProvider extends LabelProvider implements ITableLabelProvider {
 
 	private static final Logger logger = Logger.getLogger(SelectViewLabelProvider.class);
-	private Map<URL, Image> imageMap = new HashMap<URL, Image>();
+	private Map<URI, Image> imageMap = new HashMap<>();
+	//
+	@Inject
+	private TranslationService translationService;
 
 	@Override
 	public Image getColumnImage(Object element, int columnIndex) {
 
 		Image iconImage = null;
-		if(columnIndex == 0 && element instanceof MPart) {
-			MPart part = (MPart)element;
+		if(columnIndex == 0 && element instanceof MPart part) {
 			try {
 				/*
 				 * TODO dispose image
 				 */
-				URL iconURL = new URL(part.getIconURI());
-				iconImage = imageMap.get(iconURL);
+				URI iconURI = new URI(part.getIconURI());
+				iconImage = imageMap.get(iconURI);
 				if(iconImage == null) {
 					/*
 					 * Create and store the image if neccessary.
 					 */
-					iconImage = ImageDescriptor.createFromURL(iconURL).createImage();
-					imageMap.put(iconURL, iconImage);
+					iconImage = ImageDescriptor.createFromURL(iconURI.toURL()).createImage();
+					imageMap.put(iconURI, iconImage);
 				}
-			} catch(MalformedURLException e) {
+			} catch(MalformedURLException | URISyntaxException e) {
 				logger.warn(e);
 			}
 		}
@@ -62,8 +67,8 @@ public class SelectViewLabelProvider extends LabelProvider implements ITableLabe
 		/*
 		 * Dispose the images and clear the map.
 		 */
-		for(URL iconURL : imageMap.keySet()) {
-			Image iconImage = imageMap.get(iconURL);
+		for(URI iconURI : imageMap.keySet()) {
+			Image iconImage = imageMap.get(iconURI);
 			if(iconImage != null) {
 				iconImage.dispose();
 			}
@@ -78,8 +83,7 @@ public class SelectViewLabelProvider extends LabelProvider implements ITableLabe
 		 * Returns the label of the part
 		 */
 		String text = "";
-		if(element instanceof MPart) {
-			MPart part = (MPart)element;
+		if(element instanceof MPart part) {
 			switch(columnIndex) {
 				case 0: // Part Label
 					text = part.getLabel();
